--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "component",
+  "name": "@ember-decorators/component",
   "version": "0.0.0",
   "description": "The default blueprint for ember-cli addons.",
   "keywords": [
